[gd_scene load_steps=3 format=3 uid="uid://brbns00kia1i"]

[ext_resource type="Script" uid="uid://qlsn6qqfu1ws" path="res://ui.gd" id="1_fyqef"]
[ext_resource type="Texture2D" uid="uid://bmflwljehvevl" path="res://art/shield.png" id="2_m6e0p"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_right = 11.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fyqef")

[node name="Charge" type="Label" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 596.0
offset_right = 59.0
offset_bottom = 619.0
text = "0 / 10"

[node name="AntiCharge" type="Label" parent="."]
layout_mode = 0
offset_left = 1050.0
offset_top = 551.0
offset_right = 1090.0
offset_bottom = 574.0
text = "0 / 10"

[node name="Year" type="Label" parent="."]
layout_mode = 0
offset_left = 518.0
offset_top = 28.0
offset_right = 598.0
offset_bottom = 51.0
text = "YEAR 2050"

[node name="Shield" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.0784314)
texture_filter = 1
position = Vector2(42, 605)
texture = ExtResource("2_m6e0p")

[node name="AntiShield" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0, 1, 1)
self_modulate = Color(1, 1, 1, 0.0784314)
texture_filter = 1
position = Vector2(1068, 564)
texture = ExtResource("2_m6e0p")

[node name="SolarWarning" type="Label" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 427.0
offset_right = 53.0
offset_bottom = 450.0

[node name="AntiWaveWarning" type="Label" parent="."]
layout_mode = 0
offset_left = 1056.0
offset_top = 439.0
offset_right = 1096.0
offset_bottom = 462.0

[node name="Timer" type="Timer" parent="."]
